--- a/HTML/news.html
+++ b/HTML/news.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger text-white" href="../HTML/home.html">About</a>
+                        <a class="nav-link js-scroll-trigger text-white" href="../HTML/index.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger text-white" href="../HTML/news.html">Social News</a>
