--- a/news.html
+++ b/news.html
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger text-white" href="../HTML/index.html">About</a>
+                        <a class="nav-link js-scroll-trigger text-white" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger text-white" href="../HTML/news.html">Social News</a>
+                        <a class="nav-link js-scroll-trigger text-white" href="news.html">Social News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger text-white" href="#signup">Contact</a>
