Modify index.html page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link js-scroll-trigger text-white" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger text-white" href="../HTML/news.html">Social News</a>
+                        <a class="nav-link js-scroll-trigger text-white" href="news.html">Social News</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger text-white" href="#signup">Contact</a>
@@ -50,7 +50,7 @@
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">Social Villa Community</h1>
                 <h2 class="text-white-50 mx-auto mt-4 mb-5">I know it's very comfortable to sit at home and stay with your family, kids and friends and not worry about anything. But with the platform we have we should be the people that scream at the social issues and put them out there so as a society we can move forward</h2>
-                <a href="../HTML/connect.html" class="btn btn-primary js-scroll-trigger">Connect with Us</a>
+                <a href="connect.html" class="btn btn-primary js-scroll-trigger">Connect with Us</a>
             </div>
         </div>
     </header>
