Modification in index.html and connect.html page and final submission

--- a/news.html
+++ b/news.html
@@ -10,15 +10,16 @@
 
     <title>Social Villa News Community</title>
 
-    <link href="../BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="../BOOTSTRAP/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="all.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../CSS/news.css" rel="stylesheet">
+    <link href="news.css" rel="stylesheet">
 
 </head>
 
@@ -62,13 +63,7 @@
     </div>
 
     <!-- About Section -->
-    <section id="about" class="about-section text-center">
-        <div class="container">
-            <div class="row">
 
-            </div>
-        </div>
-    </section>
 
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
@@ -77,7 +72,7 @@
             <!-- Featured Project Row -->
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                 <div class="col-xl-8 col-lg-7">
-                    <img class="img-fluid mb-3 mb-lg-0" src="../IMAGES/poverty1.jpg" alt="">
+                    <img class="img-fluid mb-3 mb-lg-0" src="poverty1.jpg" alt="">
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
@@ -93,7 +88,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/Social-Welfare-institute-1.jpg" alt="">
+                <img class="card-img-top" src="Social-Welfare-institute-1.jpg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Self4Society</h4>
                     <p class="card-text">The Self4Society platform is the premiere workspace for Electronics and IT Corporates to organise employee engagements (Initiatives) for social work</p>
@@ -106,7 +101,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/po.jpg" alt="">
+                <img class="card-img-top" src="po.jpg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Poverty Rate in India 2019</h4>
                     <p class="card-text">In July 2018, World Poverty Clock, a Vienna-based think tank, reported that a minimal 5.3% or 70.6 million Indians lived in extreme poverty compared to 44% or 87 million Nigerians. Till 2019, Nigeria and Congo surpassed India in terms of total population earning below $1.9 a day.</p>
@@ -119,7 +114,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/lii.jpg" alt="">
+                <img class="card-img-top" src="lii.jpg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Illiteracy Rate in India</h4>
                     <p class="card-text">India's literacy rate is at 74.04%. Kerala has achieved a literacy rate of 93.91%. Bihar is the least literate state in India, with a literacy of 63.82%</p>
@@ -132,7 +127,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/marriage.jpeg" alt="">
+                <img class="card-img-top" src="marriage.jpeg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Child Marriage</h4>
                     <p class="card-text">Child marriage in India, according to the Indian law, is a marriage where either the woman is below age 18 or the man is below age 21. Most child marriages involve underage women, many of whom are in poor socio-economic conditions. Child marriage was outlawed in 1929, under Indian law.</p>
@@ -145,7 +140,7 @@
 
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/child.jpg" alt="">
+                <img class="card-img-top" src="child.jpg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Children without their home</h4>
                     <p class="card-text">While 18 million children work on the streets of India, it is estimated that only 5–20 percent of them are truly homeless and disconnected from their families. ... As the most vulnerable group of children in India according to UNICEF, they need to be understood as much as possible.</p>
@@ -157,7 +152,7 @@
         </div>
         <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-                <img class="card-img-top" src="../IMAGES/Indian-army.jpg" alt="">
+                <img class="card-img-top" src="Indian-army.jpg" alt="">
                 <div class="card-body">
                     <h4 class="card-title">Terrorism in India</h4>
                     <p class="card-text">It calls any incident with three or more fatalities - civilian or military - a major attack. According to SATP, there were 388 "major" incidents in India from 2014 to 2018 using their definition. Their reporting uses available ministry data and other media reports.</p>
@@ -176,7 +171,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto text-center">
 
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                    <i class="fa fa-paper-plane-o" style="color: white;"></i>
                     <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
                     <form class="form-inline d-flex">
@@ -198,7 +193,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                            <i class="fa fa-address-card-o"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">GLA University, Mathura-281406, Uttar Pradesh, India</div>
@@ -209,7 +204,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
+                            <i class="fa fa-envelope-o"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
@@ -222,7 +217,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">+91 7054048089</div>
@@ -233,10 +228,10 @@
 
             <div class="social d-flex justify-content-center">
                 <a href="#" class="mx-2">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fa fa-twitter"></i>
                 </a>
                 <a href="#" class="mx-2">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa fa-facebook"></i>
                 </a>
             </div>
 
