--- a/connect.html
+++ b/connect.html
@@ -11,15 +11,16 @@
     <title>Social Villa Community Connect</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="../BOOTSTRAP/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="all.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../CSS/connect.css" rel="stylesheet">
+    <link href="connect.css" rel="stylesheet">
 
 </head>
 
@@ -109,7 +110,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto text-center">
 
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                    <i class="fa fa-paper-plane-o" style="color: white;"></i>
                     <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
                     <form class="form-inline d-flex">
@@ -131,7 +132,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                            <i class="fa fa-address-card-o"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">GLA University, Mathura-281406, Uttar Pradesh, India</div>
@@ -142,7 +143,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
+                            <i class="fa fa-envelope"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
@@ -155,7 +156,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">+91 7054048089</div>
@@ -166,10 +167,10 @@
 
             <div class="social d-flex justify-content-center">
                 <a href="#" class="mx-2">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fa fa-twitter"></i>
                 </a>
                 <a href="#" class="mx-2">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa fa-facebook-f"></i>
                 </a>
             </div>
 
