--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
     <title>Social Villa Community</title>
 
-    <link href="../BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
-    <link href="../BOOTSTRAP/fontawesome-free/css/all.min.css" rel="stylesheet">
+    <link href="all.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-    <link href="../CSS/home1.css" rel="stylesheet">
+    <link href="home1.css" rel="stylesheet">
 
 </head>
 
@@ -73,7 +74,7 @@
             <!-- Featured Project Row -->
             <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                 <div class="col-xl-8 col-lg-7">
-                    <img class="img-fluid mb-3 mb-lg-0" src="../IMAGES/Social-Welfare-institute-1.jpg" alt="">
+                    <img class="img-fluid mb-3 mb-lg-0" src="Social-Welfare-institute-1.jpg" alt="">
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
@@ -85,7 +86,7 @@
 
             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="../IMAGES/poverty.png" alt="">
+                    <img class="img-fluid" src="poverty.png" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
@@ -102,7 +103,7 @@
 
             <div class="row justify-content-center no-gutters">
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="../IMAGES/327.jpg" alt="">
+                    <img class="img-fluid" src="327.jpg" alt="">
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
@@ -126,7 +127,7 @@
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto text-center">
 
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                    <i class="fa fa-paper-plane-o" style="color: white;"></i>
                     <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
                     <form class="form-inline d-flex">
@@ -148,7 +149,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
+                            <i class="fa fa-address-card-o"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">GLA University, Mathura-281406, Uttar Pradesh, India</div>
@@ -159,7 +160,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
+                            <i class="fa fa-envelope"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
@@ -172,7 +173,7 @@
                 <div class="col-md-4 mb-3 mb-md-0">
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
+                            <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">+91 7054048089</div>
@@ -183,10 +184,10 @@
 
             <div class="social d-flex justify-content-center">
                 <a href="#" class="mx-2">
-                    <i class="fab fa-twitter"></i>
+                    <i class="fa fa-twitter"></i>
                 </a>
                 <a href="#" class="mx-2">
-                    <i class="fab fa-facebook-f"></i>
+                    <i class="fa fa-facebook-f"></i>
                 </a>
             </div>
 
