created the project with bootstrap

--- a/connect.html
+++ b/connect.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Shani Kumar Gupta">
+    <meta name="author" content="Rahul Kumar Gupta">
 
-    <title>Social Villa Community Connect</title>
+    <title>PRAK HAPPINESS FOUNDATION Connect</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">Social Villa Community</a>
+            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">PRAK HAPPINESS FOUNDATION</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -54,7 +54,7 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Social Villa Community</h1>
+                <h1 class="mx-auto my-0 text-uppercase">PRAK HAPPINESS FOUNDATION</h1>
                 <h2 class="text-white-50 mx-auto mt-4 mb-5">I know it's very comfortable to sit at home and stay with your family, kids and friends and not worry about anything. But with the platform we have we should be the people that scream at the social issues and put them out there so as a society we can move forward</h2>
             </div>
         </div>
@@ -147,7 +147,7 @@
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">hr@SocialVilla.com</a>
+                                <a href="#">prakhappinessfoundation@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -159,7 +159,7 @@
                             <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">+91 7054048089</div>
+                            <div class="small text-black-50">+91 9793861866</div>
                         </div>
                     </div>
                 </div>
@@ -178,7 +178,7 @@
     </section>
     <footer class="bg-black small text-center text-white-50">
         <div class="container">
-            Copyright &copy; Social Villa community 2019
+            Copyright &copy; PRAK HAPPINESS FOUNDATION
         </div>
     </footer>
 
