--- a/news.html
+++ b/news.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Shani Kumar Gupta">
+    <meta name="author" content="Rahul Kumar Gupta">
 
-    <title>Social Villa News Community</title>
+    <title>PRAK HAPPINESS FOUNDATION</title>
 
     <link href="bootstrap.min.css" rel="stylesheet">
 
@@ -17,7 +17,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    
     <!-- Custom styles for this template -->
     <link href="news.css" rel="stylesheet">
 
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">Social Villa News Community</a>
+            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">PRAK HAPPINESS FOUNDATION</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -44,6 +44,12 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger text-white" href="#signup">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger text-white" href="donate.html">Donate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger text-white" href="team.html">Team</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -53,7 +59,7 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Social Villa News Community</h1>
+                <h1 class="mx-auto my-0 text-uppercase">PRAK HAPPINESS FOUNDATION</h1>
                 <h2 class="text-white-50 mx-auto mt-4 mb-5">Growth is what solves most of the big economic and social problems: poverty, government deficits, quality of life, rising healthcare and retirement costs</h2>
             </div>
         </div>
@@ -94,7 +100,7 @@
                     <p class="card-text">The Self4Society platform is the premiere workspace for Electronics and IT Corporates to organise employee engagements (Initiatives) for social work</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://self4society.mygov.in/" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -103,11 +109,11 @@
             <div class="card h-100">
                 <img class="card-img-top" src="po.jpg" alt="">
                 <div class="card-body">
-                    <h4 class="card-title">Poverty Rate in India 2019</h4>
+                    <h4 class="card-title">Poverty Rate in India </h4>
                     <p class="card-text">In July 2018, World Poverty Clock, a Vienna-based think tank, reported that a minimal 5.3% or 70.6 million Indians lived in extreme poverty compared to 44% or 87 million Nigerians. Till 2019, Nigeria and Congo surpassed India in terms of total population earning below $1.9 a day.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://www.soschildrensvillages.ca/news/poverty-in-india-602" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -120,7 +126,7 @@
                     <p class="card-text">India's literacy rate is at 74.04%. Kerala has achieved a literacy rate of 93.91%. Bihar is the least literate state in India, with a literacy of 63.82%</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://www.findeasy.in/indian-states-by-literacy-rate/" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -133,7 +139,7 @@
                     <p class="card-text">Child marriage in India, according to the Indian law, is a marriage where either the woman is below age 18 or the man is below age 21. Most child marriages involve underage women, many of whom are in poor socio-economic conditions. Child marriage was outlawed in 1929, under Indian law.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://www.girlsnotbrides.org/about-child-marriage/" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -146,7 +152,7 @@
                     <p class="card-text">While 18 million children work on the streets of India, it is estimated that only 5–20 percent of them are truly homeless and disconnected from their families. ... As the most vulnerable group of children in India according to UNICEF, they need to be understood as much as possible.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://timesofindia.indiatimes.com/india/32-kids-at-shelter-homes-left-there-by-single-parents/articleshow/67617017.cms" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -158,7 +164,7 @@
                     <p class="card-text">It calls any incident with three or more fatalities - civilian or military - a major attack. According to SATP, there were 388 "major" incidents in India from 2014 to 2018 using their definition. Their reporting uses available ministry data and other media reports.</p>
                 </div>
                 <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Read More!!</a>
+                    <a href="https://www.visionofhumanity.org/terrorism-counterterrorism-strategies-indian-chronicle/" class="btn btn-primary">Read More!!</a>
                 </div>
             </div>
         </div>
@@ -208,7 +214,7 @@
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">hr@SocialVilla.com</a>
+                                <a href="#">prakhappinessfoundation@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -220,7 +226,7 @@
                             <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">+91 7054048089</div>
+                            <div class="small text-black-50">+91 9793861866</div>
                         </div>
                     </div>
                 </div>
@@ -237,10 +243,11 @@
 
         </div>
     </section>
+     
 
     <footer class="bg-black small text-center text-white-50">
         <div class="container">
-            Copyright &copy; Social Villa community 2019
+            Copyright &copy; PRAK HAPPINESS FOUNDATION
         </div>
     </footer>
 
