--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Shani Kumar Gupta">
+    <meta name="author" content="Rahul Kumar Gupta">
 
-    <title>Social Villa Community</title>
+    <title>PRAK HAPPINESS FOUNDATION</title>
 
     <link href="bootstrap.min.css" rel="stylesheet">
 
@@ -16,7 +16,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+ 
     <link href="home1.css" rel="stylesheet">
 
 </head>
@@ -25,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">Social Villa Community</a>
+            <a class="navbar-brand js-scroll-trigger text-white" href="#page-top">PRAK HAPPINESS FOUNDATION</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -41,6 +41,12 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger text-white" href="#signup">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger text-white" href="donate.html">Donate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger text-white" href="team.html">Team</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -49,7 +55,7 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Social Villa Community</h1>
+                <h1 class="mx-auto my-0 text-uppercase">PRAK HAPPINESS FOUNDATION</h1>
                 <h2 class="text-white-50 mx-auto mt-4 mb-5">I know it's very comfortable to sit at home and stay with your family, kids and friends and not worry about anything. But with the platform we have we should be the people that scream at the social issues and put them out there so as a society we can move forward</h2>
                 <a href="connect.html" class="btn btn-primary js-scroll-trigger">Connect with Us</a>
             </div>
@@ -78,7 +84,7 @@
                 </div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Social Villa- Homeless Children in India</h4>
+                        <h4>PRAK HAPPINESS FOUNDATION- Homeless Children in India</h4>
                         <p class="text-black-50 mb-0">While 18 million children work on the streets of India, it is estimated that only 5–20 percent of them are truly homeless and disconnected from their families. ... As the most vulnerable group of children in India according to UNICEF, they need to be understood as much as possible.</p>
                     </div>
                 </div>
@@ -92,7 +98,7 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Social Villa- Poverty in India</h4>
+                                <h4 class="text-white">PRAK HAPPINESS FOUNDATION- Poverty in India</h4>
                                 <p class="mb-0 text-white-50">Two-thirds of people in India live in poverty: 68.8% of the Indian population lives on less than $2 a day. Over 30% even have less than $1.25 per day available - they are considered extremely poor.</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0">
                             </div>
@@ -109,7 +115,7 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Social Villa- Illiteracy in India</h4>
+                                <h4 class="text-white">PRAK HAPPINESS FOUNDATION- Illiteracy in India</h4>
                                 <p class="mb-0 text-white-50">Illiteracy in India is a problem which has complex dimensions attached to it. Illiteracy in India is more or less concerned with different forms of disparities that exist in the country. ... India possesses the largest illiterate population. Literacy rates stood at 82.14 percent for men in 2011 and 65.46 percent for women.</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0">
                             </div>
@@ -164,7 +170,7 @@
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">hr@SocialVilla.com</a>
+                                <a href="#">prakhappinessfoundation@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +182,7 @@
                             <i class="fa fa-phone-square"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">+91 7054048089</div>
+                            <div class="small text-black-50">+91 9793861866</div>
                         </div>
                     </div>
                 </div>
@@ -193,10 +199,12 @@
 
         </div>
     </section>
+ 
 
+</div>
     <footer class="bg-black small text-center text-white-50">
         <div class="container">
-            Copyright &copy; Social Villa community 2019
+            Copyright &copy; PRAK HAPPINESS FOUNDATION
         </div>
     </footer>
 
